# auth_service_exam_2022

./: .gitignore  Cargo.toml  DOCKER_README.md  Dockerfile  README.md  app.docker-compose.yaml  docker-compose.yml  gateway-routes.json  genkeys.sh  mutations.sh  refinery.toml  start.sh
.github/actions/setup-env/: action.yaml
.github/workflows/: mutation-test.yaml  pr-logs.yaml  test-and-deploy.yaml
migrations/: V1__initial.sql
proto/: auth.proto
src/: grpc.rs  jwt.rs  login_types.rs  main.rs  rest.rs
src/jwt/: mod.rs  role_claims.rs  token_manager.rs
src/user/: mod.rs  role.rs  user.rs  user_manager.rs
test_db_init/: V1__initial.sql  V2__create_dummy_users.sql
