[package]
name = "auth_service_exam_2022"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.7"
postgres-types = { version = "0.2.4", features = ["derive"] }
deadpool-postgres = "0.10.3"
serde = { version = "1.0.147", features = ["derive"] }
jwt-simple = "0.11.2"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
tonic = "0.8.2"
prost = "0.11.0"
bcrypt = "0.13.0"

[dev-dependencies]
regex = "1.7.0"

[build-dependencies]
tonic-build = "0.8.2"